--- a/actus/actus.cabal
+++ b/actus/actus.cabal
@@ -18,6 +18,7 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , binary-search
     , pretty-show
     , really-safe-money
     , time
