--- a/actus/actus.cabal
+++ b/actus/actus.cabal
@@ -23,6 +23,7 @@ library
     , base >=4.7 && <5
     , pretty-show
     , really-safe-money
+    , really-safe-money-autodocodec
     , time
     , validity
   default-language: Haskell2010
