--- a/actus/actus.cabal
+++ b/actus/actus.cabal
@@ -24,8 +24,10 @@ library
     , pretty-show
     , really-safe-money
     , really-safe-money-autodocodec
+    , text
     , time
     , validity
+    , validity-text
   default-language: Haskell2010
 
 executable actus
@@ -59,11 +61,13 @@ test-suite actus-test
     , genvalidity
     , genvalidity-sydtest
     , genvalidity-sydtest-aeson
+    , genvalidity-text
     , genvalidity-time
     , path
     , path-io
     , really-safe-money
     , really-safe-money-gen
     , sydtest
+    , text
     , time
   default-language: Haskell2010
