--- a/actus/actus.cabal
+++ b/actus/actus.cabal
@@ -21,12 +21,14 @@ library
       aeson
     , autodocodec
     , base >=4.7 && <5
+    , containers
     , pretty-show
     , really-safe-money
     , really-safe-money-autodocodec
     , text
     , time
     , validity
+    , validity-containers
     , validity-text
     , validity-time
   default-language: Haskell2010
@@ -61,6 +63,7 @@ test-suite actus-test
     , aeson
     , base >=4.7 && <5
     , genvalidity
+    , genvalidity-containers
     , genvalidity-sydtest
     , genvalidity-sydtest-aeson
     , genvalidity-text
