--- a/actus/actus.cabal
+++ b/actus/actus.cabal
@@ -25,10 +25,12 @@ library
     , pretty-show
     , really-safe-money
     , really-safe-money-autodocodec
+    , scientific
     , text
     , time
     , validity
     , validity-containers
+    , validity-scientific
     , validity-text
     , validity-time
   default-language: Haskell2010
@@ -64,6 +66,7 @@ test-suite actus-test
     , base >=4.7 && <5
     , genvalidity
     , genvalidity-containers
+    , genvalidity-scientific
     , genvalidity-sydtest
     , genvalidity-sydtest-aeson
     , genvalidity-text
