--- a/actus/actus.cabal
+++ b/actus/actus.cabal
@@ -62,6 +62,7 @@ test-suite actus-test
       Actus.Term.ContractIdentifier.Gen
       Actus.Term.ContractIdentifierSpec
       Actus.Term.TestUtils
+      Actus.TestUtils
       Actus.TypesSpec
       Paths_actus
   hs-source-dirs:
