--- a/actus/actus.cabal
+++ b/actus/actus.cabal
@@ -25,6 +25,7 @@ library
       aeson
     , autodocodec
     , base >=4.7 && <5
+    , bytestring
     , containers
     , pretty-show
     , really-safe-money
@@ -39,7 +40,7 @@ library
     , validity-time
   default-language: Haskell2010
 
-executable actus
+executable actus-test-harness
   main-is: Main.hs
   other-modules:
       Paths_actus
