--- a/actus/actus.cabal
+++ b/actus/actus.cabal
@@ -10,11 +10,11 @@ build-type:     Simple
 
 library
   exposed-modules:
-      Actus
       Actus.Contract.Ann
       Actus.Contract.Class
       Actus.Term.Class
       Actus.Term.ContractIdentifier
+      Actus.Tester
       Actus.TestHarness
       Actus.TestHarness.Types
       Actus.Types
@@ -47,7 +47,19 @@ executable actus-test-harness
   other-modules:
       Paths_actus
   hs-source-dirs:
-      app
+      harness
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      actus
+    , base >=4.7 && <5
+  default-language: Haskell2010
+
+executable actus-tester
+  main-is: Main.hs
+  other-modules:
+      Paths_actus
+  hs-source-dirs:
+      tester
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       actus
