--- a/actus/actus.cabal
+++ b/actus/actus.cabal
@@ -46,6 +46,7 @@ library
     , text
     , time
     , typed-process
+    , unliftio
     , validity
     , validity-containers
     , validity-scientific
